apps/template-app-go/base/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: template-app-go
  namespace: template-app-go
spec:
  hosts:
  - "template-app-go.diegoluisi.eti.br"
  gateways:
  - istio-system/istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: template-app-go
